prepare Employees tab

--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -68,13 +68,13 @@
     <Compile Include="Converters\BorderThicknessToStrokeThicknessConverter.cs" />
     <Compile Include="Converters\EvenOddToZeroOneConverter.cs" />
     <Compile Include="TemplateSelectors\StageDataTemplateSelector.cs" />
-    <Compile Include="ViewModels\EntityViewModels\AppointmentViewModel.cs" />
+    <Compile Include="ViewModels\EntityViewModels\AppointmentGroupingViewModel.cs" />
     <Compile Include="ViewModels\Dialogs\ErrorViewModel.cs" />
     <Compile Include="ViewModels\EntityViewModels\CategoryViewModel.cs" />
     <Compile Include="ViewModels\EntityViewModels\ProductivityViewModel.cs" />
     <Compile Include="ViewModels\EntityViewModels\ShortBreakViewModel.cs" />
-    <Compile Include="ViewModels\EntityViewModels\PositionViewModel.cs" />
-    <Compile Include="ViewModels\EntityViewModels\ShiftViewModel.cs" />
+    <Compile Include="ViewModels\EntityViewModels\PositionGroupingViewModel.cs" />
+    <Compile Include="ViewModels\EntityViewModels\ShiftGroupingViewModel.cs" />
     <Compile Include="ViewModels\StageViewModels\ActionsImportStageViewModel.cs" />
     <Compile Include="ViewModels\StageViewModels\CategoriesThresholdStageViewModel.cs" />
     <Compile Include="ViewModels\StageViewModels\CheckEmployeesStageViewModel.cs" />
