--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -177,6 +177,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Resources\Window\NumericComboBoxStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\Window\TabControlStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
