--- a/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
+++ b/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
@@ -125,6 +125,12 @@
     <Compile Include="Contexts\Comparers\ComparerFactory.cs" />
     <Compile Include="Contexts\Comparers\EntityEqualityComparer.cs" />
     <Compile Include="Contexts\Comparers\ShipmentActionComparer.cs" />
+    <Compile Include="Contexts\ProductivityCalculator\Builders\GatheringProductivityBuilder.cs" />
+    <Compile Include="Contexts\ProductivityCalculator\Builders\InventoryProductivityBuilder.cs" />
+    <Compile Include="Contexts\ProductivityCalculator\Builders\IProductivityBuilder.cs" />
+    <Compile Include="Contexts\ProductivityCalculator\Builders\OtherProductivityBuilder.cs" />
+    <Compile Include="Contexts\ProductivityCalculator\Builders\ReceptionProductivityBuilder.cs" />
+    <Compile Include="Contexts\ProductivityCalculator\Builders\ShipmentProductivityBuilder.cs" />
     <Compile Include="Contexts\ReportService.cs" />
     <Compile Include="FileModels\EmployeeShortImportModel.cs" />
     <Compile Include="FileModels\OtherActionImportModel.cs" />
@@ -173,12 +179,13 @@
     <Compile Include="Models\AllActions.cs" />
     <Compile Include="Models\AppointmentGrouping.cs" />
     <Compile Include="Models\PositionGrouping.cs" />
+    <Compile Include="Models\Productivity.cs" />
     <Compile Include="Models\ShiftGrouping.cs" />
     <Compile Include="Models\OperationThresholds.cs" />
     <Compile Include="Period.cs" />
-    <Compile Include="ProductivityCalculator\AddTimeOptions.cs" />
-    <Compile Include="ProductivityCalculator\IProductivityCalculator.cs" />
-    <Compile Include="ProductivityCalculator\Productivity2.cs" />
+    <Compile Include="Contexts\ProductivityCalculator\AddTimeOptions.cs" />
+    <Compile Include="Contexts\ProductivityCalculator\IProductivityCalculator.cs" />
+    <Compile Include="Contexts\ProductivityCalculator\Productivity2.cs" />
     <Compile Include="Models\ActionModels\ProductMgh.cs" />
     <Compile Include="FileModels\ActionImportModel.cs" />
     <Compile Include="FileModels\WithProductActionImportModel.cs" />
@@ -190,7 +197,8 @@
     <Compile Include="FileModels\ShipmentImportModel.cs" />
     <Compile Include="IWarehouse.cs" />
     <Compile Include="Interfaces\IWarehouseEntities.cs" />
-    <Compile Include="ProductivityCalculator\ProductivityObservableCollection.cs" />
+    <Compile Include="Contexts\ProductivityCalculator\ProductivityCalculator.cs" />
+    <Compile Include="Contexts\ProductivityCalculator\ProductivityObservableCollection.cs" />
     <Compile Include="ProductivityIndicatorsModels\CargoIndicators.cs" />
     <Compile Include="ProductivityIndicatorsModels\CompositeQuantityIndicators.cs" />
     <Compile Include="ProductivityIndicatorsModels\GatheringIndicators.cs" />
@@ -219,10 +227,6 @@
     <ProjectReference Include="..\WorkSpeed.Data\WorkSpeed.Data.csproj">
       <Project>{72e065c5-8769-4008-9529-11194be488e0}</Project>
       <Name>WorkSpeed.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WorkSpeed.Productivity\WorkSpeed.Productivity.csproj">
-      <Project>{61c2a155-2641-4617-826e-82911531837a}</Project>
-      <Name>WorkSpeed.Productivity</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
