--- a/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
+++ b/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
@@ -125,12 +125,29 @@
     <Compile Include="Contexts\Comparers\ComparerFactory.cs" />
     <Compile Include="Contexts\Comparers\EntityEqualityComparer.cs" />
     <Compile Include="Contexts\Comparers\ShipmentActionComparer.cs" />
-    <Compile Include="Contexts\ProductivityCalculator\Builders\GatheringProductivityBuilder.cs" />
-    <Compile Include="Contexts\ProductivityCalculator\Builders\InventoryProductivityBuilder.cs" />
-    <Compile Include="Contexts\ProductivityCalculator\Builders\IProductivityBuilder.cs" />
-    <Compile Include="Contexts\ProductivityCalculator\Builders\OtherProductivityBuilder.cs" />
-    <Compile Include="Contexts\ProductivityCalculator\Builders\ReceptionProductivityBuilder.cs" />
-    <Compile Include="Contexts\ProductivityCalculator\Builders\ShipmentProductivityBuilder.cs" />
+    <Compile Include="Contexts\Productivity\ActionDetails\ShipmentActionDetails.cs" />
+    <Compile Include="Contexts\Productivity\ActionDetails\TimeActionDetails.cs" />
+    <Compile Include="Contexts\Productivity\ActionDetails\WithProductActionDetails.cs" />
+    <Compile Include="Contexts\Productivity\ActionDetails\WithScansActionDetails.cs" />
+    <Compile Include="Contexts\Productivity\BreakRepository.cs" />
+    <Compile Include="Contexts\Productivity\Builders\GatheringProductivityBuilder.cs" />
+    <Compile Include="Contexts\Productivity\Builders\InventoryProductivityBuilder.cs" />
+    <Compile Include="Contexts\Productivity\Builders\IProductivityBuilder.cs" />
+    <Compile Include="Contexts\Productivity\Builders\OtherProductivityBuilder.cs" />
+    <Compile Include="Contexts\Productivity\Builders\ReceptionProductivityBuilder.cs" />
+    <Compile Include="Contexts\Productivity\Builders\ShipmentProductivityBuilder.cs" />
+    <Compile Include="Contexts\Productivity\CategoryFilter.cs" />
+    <Compile Include="Contexts\Productivity\Comparers\DayPeriodEqualityComparer.cs" />
+    <Compile Include="Contexts\Productivity\DayPeriod.cs" />
+    <Compile Include="Contexts\Productivity\FactoryEmployeeAction.cs" />
+    <Compile Include="Contexts\Productivity\IBreakRepository.cs" />
+    <Compile Include="Contexts\Productivity\ICategoryFilter.cs" />
+    <Compile Include="Contexts\Productivity\IFactoryEmployeeAction.cs" />
+    <Compile Include="Contexts\Productivity\IPauseBetweenActions.cs" />
+    <Compile Include="Contexts\Productivity\PauseBetweenActions.cs" />
+    <Compile Include="Contexts\Productivity\Period.cs" />
+    <Compile Include="Contexts\Productivity\Productivity.cs" />
+    <Compile Include="Contexts\Productivity\RepositoryEmployeeAction.cs" />
     <Compile Include="Contexts\ReportService.cs" />
     <Compile Include="FileModels\EmployeeShortImportModel.cs" />
     <Compile Include="FileModels\OtherActionImportModel.cs" />
@@ -183,9 +200,9 @@
     <Compile Include="Models\ShiftGrouping.cs" />
     <Compile Include="Models\OperationThresholds.cs" />
     <Compile Include="Period.cs" />
-    <Compile Include="Contexts\ProductivityCalculator\AddTimeOptions.cs" />
-    <Compile Include="Contexts\ProductivityCalculator\IProductivityCalculator.cs" />
-    <Compile Include="Contexts\ProductivityCalculator\Productivity2.cs" />
+    <Compile Include="Contexts\Productivity\AddTimeOptions.cs" />
+    <Compile Include="Contexts\Productivity\IProductivityCalculator.cs" />
+    <Compile Include="Contexts\Productivity\Productivity2.cs" />
     <Compile Include="Models\ActionModels\ProductMgh.cs" />
     <Compile Include="FileModels\ActionImportModel.cs" />
     <Compile Include="FileModels\WithProductActionImportModel.cs" />
@@ -197,8 +214,8 @@
     <Compile Include="FileModels\ShipmentImportModel.cs" />
     <Compile Include="IWarehouse.cs" />
     <Compile Include="Interfaces\IWarehouseEntities.cs" />
-    <Compile Include="Contexts\ProductivityCalculator\ProductivityCalculator.cs" />
-    <Compile Include="Contexts\ProductivityCalculator\ProductivityObservableCollection.cs" />
+    <Compile Include="Contexts\Productivity\ProductivityCalculator.cs" />
+    <Compile Include="Contexts\Productivity\ProductivityObservableCollection.cs" />
     <Compile Include="ProductivityIndicatorsModels\CargoIndicators.cs" />
     <Compile Include="ProductivityIndicatorsModels\CompositeQuantityIndicators.cs" />
     <Compile Include="ProductivityIndicatorsModels\GatheringIndicators.cs" />
