--- a/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
+++ b/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
@@ -196,7 +196,10 @@
     <Compile Include="Models\AllActions.cs" />
     <Compile Include="Models\AppointmentGrouping.cs" />
     <Compile Include="Models\PositionGrouping.cs" />
-    <Compile Include="Models\Productivity.cs" />
+    <Compile Include="Models\Productivity\EmployeeProductivityBase.cs" />
+    <Compile Include="Models\Productivity\GatheringProductivity.cs" />
+    <Compile Include="Models\Productivity\IProductivity.cs" />
+    <Compile Include="Models\Productivity\ReceptionProductivity.cs" />
     <Compile Include="Models\ShiftGrouping.cs" />
     <Compile Include="Models\OperationThresholds.cs" />
     <Compile Include="Period.cs" />
