WorkSpeedDbContextExtensionsTests.cs Add

--- a/Tests/WorkSpeed.Data.Tests/WorkSpeed.Data.Tests.csproj
+++ b/Tests/WorkSpeed.Data.Tests/WorkSpeed.Data.Tests.csproj
@@ -124,6 +124,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context\ReportService\UnitTests\WorkSpeedDbContextExtensionsTests.cs" />
     <Compile Include="FunctionalTests\WorkSpeedDbContextFunctionalTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
