--- a/Experiments/Experiments.Threads/Experiments.Threads.csproj
+++ b/Experiments/Experiments.Threads/Experiments.Threads.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConcurrentStackBenchmark.cs" />
+    <Compile Include="IProgram.cs" />
+    <Compile Include="MultipleAwait.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
