--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -70,15 +70,23 @@
     <Compile Include="Converters\EvenOddToZeroOneConverter.cs" />
     <Compile Include="Converters\ImageConverter.cs" />
     <Compile Include="Converters\TabControlHeightConverter.cs" />
-    <Compile Include="TemplateSelectors\StageDataTemplateSelector.cs" />
-    <Compile Include="ViewModels\EmployeeReportViewModel.cs" />
+    <Compile Include="TemplateSelectors\FilterTemplateSelector.cs" />
+    <Compile Include="ViewModels\Productivity\AspectsViewModel.cs" />
+    <Compile Include="ViewModels\Productivity\OtherProductivityViewModel.cs" />
+    <Compile Include="ViewModels\Productivity\ShipmentProductivityViewModel.cs" />
+    <Compile Include="ViewModels\ReportService\EmployeeReportViewModel.cs" />
     <Compile Include="ViewModels\Entities\AbbreviationViewModel.cs" />
     <Compile Include="ViewModels\Entities\RankViewModel.cs" />
     <Compile Include="ViewModels\Grouping\AppointmentGroupingViewModel.cs" />
     <Compile Include="ViewModels\Dialogs\ErrorViewModel.cs" />
     <Compile Include="ViewModels\Entities\AppointmentViewModel.cs" />
-    <Compile Include="ViewModels\IReportViewModel.cs" />
-    <Compile Include="ViewModels\ProductivityReportViewModel.cs" />
+    <Compile Include="ViewModels\ReportService\FilteredViewModel.cs" />
+    <Compile Include="ViewModels\ReportService\FilterItemViewModel.cs" />
+    <Compile Include="ViewModels\ReportService\EntityFilterViewModel.cs" />
+    <Compile Include="ViewModels\ReportService\Contracts\IFilteredViewModel.cs" />
+    <Compile Include="ViewModels\ReportService\Contracts\IEntityObservableCollection.cs" />
+    <Compile Include="ViewModels\ReportService\Contracts\IReportViewModel.cs" />
+    <Compile Include="ViewModels\ReportService\ProductivityReportViewModel.cs" />
     <Compile Include="ViewModels\Productivity\CategorizedProductivityViewModel.cs" />
     <Compile Include="ViewModels\Entities\CategoryViewModel.cs" />
     <Compile Include="ViewModels\Productivity\EmployeeProductivityViewModel.cs" />
@@ -93,7 +101,7 @@
     <Compile Include="ViewModels\Grouping\PositionGroupingViewModel.cs" />
     <Compile Include="ViewModels\Grouping\ShiftGroupingViewModel.cs" />
     <Compile Include="ViewModels\Productivity\TimeProductivityViewModel.cs" />
-    <Compile Include="ViewModels\ReportViewModel.cs" />
+    <Compile Include="ViewModels\ReportService\ReportViewModel.cs" />
     <Compile Include="ViewModels\StageViewModels\ActionsImportStageViewModel.cs" />
     <Compile Include="ViewModels\StageViewModels\CategoriesThresholdStageViewModel.cs" />
     <Compile Include="ViewModels\StageViewModels\CheckEmployeesStageViewModel.cs" />
@@ -174,7 +182,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Resources\ProductivityDataTemplates.xaml">
+    <Page Include="Resources\Window\DataTemplates.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\Window\ProductivityDataTemplates.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -206,7 +218,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Resources\Window\DataTemplates.xaml">
+    <Page Include="Resources\Window\EmployeeReportDataTemplates.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
