--- a/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
+++ b/Code/WorkSpeed.Business/WorkSpeed.Business.csproj
@@ -198,10 +198,10 @@
     <Compile Include="Models\AllActions.cs" />
     <Compile Include="Models\AppointmentGrouping.cs" />
     <Compile Include="Models\PositionGrouping.cs" />
-    <Compile Include="Models\Productivity\EmployeeProductivityCollection.cs" />
+    <Compile Include="Models\Productivity\EmployeeProductivity.cs" />
     <Compile Include="Models\Productivity\GatheringProductivity.cs" />
     <Compile Include="Contexts\Productivity\IProductivity.cs" />
-    <Compile Include="Models\Productivity\IEmployeeProductivityCollection.cs" />
+    <Compile Include="Models\Productivity\IEmployeeProductivity.cs" />
     <Compile Include="Models\Productivity\ReceptionProductivity.cs" />
     <Compile Include="Models\ShiftGrouping.cs" />
     <Compile Include="Models\OperationThresholds.cs" />
