--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -126,11 +126,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Migrations\20190226083913_InitialCreate.cs" />
-    <Compile Include="Migrations\20190226083913_InitialCreate.designer.cs">
-      <DependentUpon>20190226083913_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\WorkSpeedDbContextModelSnapshot.cs" />
     <Compile Include="Models\Comparers\EmployeeActionComparer.cs" />
     <Compile Include="Models\Comparers\EmployeeComparer.cs" />
     <Compile Include="Models\Comparers\OperationComparer.cs" />
@@ -220,7 +215,9 @@
   <ItemGroup>
     <None Include="Resources\default_face.bmp" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
