--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -126,6 +126,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\20190226085702_InitialCreate.cs" />
+    <Compile Include="Migrations\20190226085702_InitialCreate.designer.cs">
+      <DependentUpon>20190226085702_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\WorkSpeedDbContextModelSnapshot.cs" />
     <Compile Include="Models\Comparers\EmployeeActionComparer.cs" />
     <Compile Include="Models\Comparers\EmployeeComparer.cs" />
     <Compile Include="Models\Comparers\OperationComparer.cs" />
@@ -215,9 +220,7 @@
   <ItemGroup>
     <None Include="Resources\default_face.bmp" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Migrations\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
